# iiko_client_rs

./: Cargo.toml  README.md  openapi_iiko.json
.openapi-generator/: FILES
docs/: ActionOnValidationRejection.md  ActionType.md  ActiveCourierLocation.md  ActiveCourierLocationsByTerminalGroupRequest.md  ActiveCourierLocationsResponse.md  AddCustomerToProgramRequest.md  AddCustomerToProgramResponse.md  AddMagnetCardRequest.md  AddOrderItemsToBanquetRequest.md  AddOrderPaymentsRequest.md  AddOrderPaymentsToBanquetRequest.md  AddProductsToStopListItem.md  AddProductsToStopListRequest.md  AddressHintsServiceType.md  AddressesApi.md  AllergenGroupDto.md  AllowedItemWithDuration.md  AuthorizationApi.md  AvailableCombo.md  AvailablePayment.md  AwakeTerminalGroupsRequest.md  AwakeTerminalGroupsResponse.md  BanquetsReservesApi.md  CalculateCheckinRequest.md  CalculateCheckinResponse.md  CalculateComboPriceRequest.md  CalculateComboPriceResponse.md  CallCenterAction.md  CallCenterTelemetry.md  CancelCause.md  CancelCausesRequest.md  CancelCausesResponse.md  CancelHoldMoneyRequest.md  CancelReserveRequest.md  CardPaymentAdditionalData.md  CertificateCounteragentType.md  ChangeCategoryForCustomerRequest.md  ChangePersonalSessionResponse.md  ChangeUserBalanceRequest.md  CheckCreateOrderResponse.md  (+470 more)
src/apis/: addresses_api.rs  authorization_api.rs  banquets_reserves_api.rs  configuration.rs  customer_categories_api.rs  customers_api.rs  deliveries_create_and_update_api.rs  deliveries_retrieve_api.rs  delivery_restrictions_api.rs  deprecated_api.rs  dictionaries_api.rs  discounts_and_promotions_api.rs  drafts_api.rs  employees_api.rs  marketing_sources_api.rs  menu_api.rs  (+9 more)
(+488 files in other folders)
