[package]
name = "iiko_client"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "iiko cloud API"
license = "Unlicense"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "multipart",
] }
